--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li>Часовых поясов <span class="intro__list_number">11</span></li>
-          <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_number">12</span></li>
-          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_number">16</span></li>
-          <li>Природных заповеднико <span class="intro__list_number">105</span></li>
-          <li>Аэропортов <span class="intro__list_number">241</span></li>
+          <li>Часовых поясов <span class="intro__list-number">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-number">12</span></li>
+          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-number">16</span></li>
+          <li>Природных заповеднико <span class="intro__list-number">105</span></li>
+          <li>Аэропортов <span class="intro__list-number">241</span></li>
         </ul>
       </section>
       <section class="photo-grid">
@@ -119,11 +119,11 @@
     </main>
     <footer class="footer">
       <nav class="footer__nav">
-        <a href="https://yandex.ru/maps" class="footer__nav_link" target="_blank">Карты</a>
-        <a href="https://yandex.ru/pogoda" class="footer__nav_link" target="_blank">Погода</a>
-        <a href="https://rasp.yandex.ru" class="footer__nav_link" target="_blank">Расписания</a>
-        <a href="https://calendar.yandex.ru" class="footer__nav_link" target="_blank">Календарь</a>
-        <a href="https://travel.yandex.ru" class="footer__nav_link" target="_blank">Путешествия</a>
+        <a href="https://yandex.ru/maps" class="footer__nav-link" target="_blank">Карты</a>
+        <a href="https://yandex.ru/pogoda" class="footer__nav-link" target="_blank">Погода</a>
+        <a href="https://rasp.yandex.ru" class="footer__nav-link" target="_blank">Расписания</a>
+        <a href="https://calendar.yandex.ru" class="footer__nav-link" target="_blank">Календарь</a>
+        <a href="https://travel.yandex.ru" class="footer__nav-link" target="_blank">Путешествия</a>
       </nav>
       <p class="footer__copyright">©2021, GattoNero_Rus</p>
     </footer>
