--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="Путешествия по России">
   <meta name="author" content="GattoNero_Rus (Constantine M Kolpashnikov)">
-  <title>Путешествия по России</title>
+  <title>Путешествия по&nbsp;России</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="root">
@@ -13,14 +13,14 @@
     <header class="header">
       <img src="./images/header__logo.svg" alt="Логотип сайта: миниатюра карты и подпись «Россия»" class="header__logo">
       <ul class="header__lang">
-        <li class="header__lang-link">Ru</li>
-        <li class="header__lang-link">En</li>
+        <li class="header__link header__link_active">Ru</li>
+        <li class="header__link">En</li>
       </ul>
     </header>
     <main class="main">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
-        <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img src="./images/lead-polka.jpg" alt="Девушка на боковой полке и схема транссибирской магистрали" class="lead__image">
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
@@ -125,7 +125,7 @@
         <a href="https://calendar.yandex.ru" class="footer__nav-link" target="_blank">Календарь</a>
         <a href="https://travel.yandex.ru" class="footer__nav-link" target="_blank">Путешествия</a>
       </nav>
-      <p class="footer__copyright">©2021, GattoNero_Rus</p>
+      <p class="footer__copyright">&copy;2021, GattoNero_Rus</p>
     </footer>
   </div>
 </body>
