--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
       <img src="./images/header__logo.svg" alt="Логотип сайта: миниатюра карты и подпись «Россия»" class="header__logo">
       <ul class="header__lang">
-        <li class="header__link header__link_active">Ru</li>
-        <li class="header__link">En</li>
+        <li class="header__lang-item"><a href="#" class="header__link header__link_active">Ru</a></li>
+        <li class="header__lang-item"><a href="#" class="header__link">En</a></li>
       </ul>
     </header>
     <main class="main">
@@ -106,15 +106,15 @@
           </div>
           <img src="./images/place-karelia.jpg" alt="Вид на Карельское болото, окружённое лесистыми скалами" class="place__image">
           <div class="place__paragraphs">
-            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия.</p>
-            <p class="place__paragraph">Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
           </div>
         </article>
       </section>
       <section class="cover">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay" target="_blank"></a>
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        </a>
       </section>
     </main>
     <footer class="footer">
