--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
       <img src="./images/header__logo.svg" alt="Логотип сайта: миниатюра карты и подпись «Россия»" class="header__logo">
       <ul class="header__lang">
-        <li class="header__lang-item"><a href="#" class="header__link header__link_active">Ru</a></li>
-        <li class="header__lang-item"><a href="#" class="header__link">En</a></li>
+        <li class="header__lang-item"><a href="#" target="_blank" class="header__link header__link_active">Ru</a></li>
+        <li class="header__lang-item"><a href="#" target="_blank" class="header__link">En</a></li>
       </ul>
     </header>
     <main class="main">
